# md2pptx

./: AGENT.md  Cargo.toml  README.md
benches/: conversion_bench.rs
src/: lib.rs  main.rs
src/converter/: md_to_pptx.rs  mod.rs
src/parser/: markdown.rs
src/presentation/: builder.rs  templates.rs
src/utils/: error.rs  file_io.rs  mod.rs
tests/fixtures/input/: sample.md  simple.md
